--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,7 @@ pydantic==2.5.0
 pydantic[email]==2.5.0
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
-passlib==1.7.4
-bcrypt==3.2.2
+passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 pytest==7.4.3
 pytest-flask==1.3.0
