--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,8 @@ SQLAlchemy==2.0.23
 psycopg2-binary==2.9.9
 redis==5.0.1
 alembic==1.12.1
-pydantic==2.5.0
-pydantic[email]==2.5.0
-pydantic-settings==2.1.0
+pydantic[email]<2.0
+pydantic-settings==1.0.1
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
@@ -17,4 +16,4 @@ pytest-flask==1.3.0
 flask-cors==4.0.0
 email-validator==2.1.0
 gunicorn==21.2.0
-requests==2.31.0 
+requests==2.31.0
