--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     startCommand: gunicorn run:app --bind 0.0.0.0:$PORT
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11.0
+        value: 3.11.7
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
@@ -24,7 +24,17 @@ services:
       - key: REDIS_USERNAME
         value: default
       - key: FLASK_ENV
-        value: development
+        value: production
+      - key: SMTP_HOST
+        value: smtp-relay.brevo.com
+      - key: SMTP_PORT
+        value: 587
+      - key: SMTP_USER
+        value: 93d516001@smtp-brevo.com
+      - key: SMTP_KEY
+        sync: false
+      - key: FROM_EMAIL
+        value: sahoo.chandan9728@gmail.com
 
 databases:
   - name: tracker-job-db
